--- a/.github/workflows/deploy-lambda.yml
+++ b/.github/workflows/deploy-lambda.yml
@@ -15,9 +15,9 @@ permissions:
 
 env:
   AWS_REGION: sa-east-1
-  FUNCTION_NAME: FeedbackIngressLambda
-  HANDLER: com.fiap.lambda.FeedbackIngressLambda::handleRequest
-  LAMBDA_ROLE_ARN: arn:aws:iam::992382492436:role/FeedbackHubLambdaExecutionRole
+  FUNCTION_NAME: FeedbackReportLambda
+  HANDLER: io.quarkus.amazon.lambda.runtime.QuarkusStreamHandler::handleRequest
+  LAMBDA_ROLE_ARN: arn:aws:iam::992382492436:role/role-feedback-report
 
 jobs:
   deploy:
