Refatoração no ReportLambda, inclusão do REMETENTE no application.properties e criação da EmailService e PDFGeneratorService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ quarkus.ses.aws.region=sa-east-1
 db.cluster-arn=arn:aws:rds:sa-east-1:992382492436:cluster:database-course
 db.secret-arn=arn:aws:secretsmanager:sa-east-1:992382492436:secret:secret-db-nep8fY
 db.name=dbcourse
+
+aws.ses.sender=caikerodriguesqueiroz@gmail.com
